Add google analytics

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -4,11 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>BIP QUANTUM</title>
+  <title>BIPQUANTUM | Dapp</title>
   <base href="/" />
 
   <!-- Default favicon -->
   <link id="favicon" rel="icon" href="/favicon-light.ico" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V840NCQT54"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-V840NCQT54');
+  </script>
+
 </head>
 
 <body>
