--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -36,6 +36,7 @@
     gtag('config', 'G-V840NCQT54');
   </script>
 
+  <!-- Hotjar Tracking Code -->
   <script> 
     (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -46,6 +47,71 @@
       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
       a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
+
+  <!-- Safe Mixpanel Stub for IC canisters -->
+  <script type="text/javascript">
+  (function(e, c) {
+    try {
+      if (!c.__SV) {
+        var l, h;
+        window.mixpanel = c;
+        c._i = [];
+        c.init = function(token, config, name) {
+          function t(obj, method) {
+            var parts = method.split(".");
+            if (parts.length === 2) { obj = obj[parts[0]]; method = parts[1]; }
+            obj[method] = function() {
+              obj.push([method].concat(Array.prototype.slice.call(arguments, 0)));
+            };
+          }
+          var mp = c;
+          if (typeof name !== "undefined") { mp = c[name] = []; } else { name = "mixpanel"; }
+          mp.people = mp.people || [];
+          mp.toString = function(d) {
+            var a = "mixpanel";
+            if (name !== "mixpanel") { a += "." + name; }
+            return (!d) ? a + " (stub)" : a;
+          };
+          mp.people.toString = function() { return mp.toString(1) + ".people (stub)"; };
+
+          l = "disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders start_session_recording stop_session_recording people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
+          for (h = 0; h < l.length; h++) t(mp, l[h]);
+
+          var n = "set set_once union unset remove delete".split(" ");
+          mp.get_group = function() {
+            function d(p) { a[p] = function() { mp.push([g, [p].concat(Array.prototype.slice.call(arguments, 0))]); }; }
+            var a = {}, g = ["get_group"].concat(Array.prototype.slice.call(arguments, 0));
+            for (var m = 0; m < n.length; m++) d(n[m]);
+            return a;
+          };
+
+          c._i.push([token, config, name]);
+        };
+        c.__SV = 1.2;
+
+        // Load external Mixpanel library safely
+        var k = e.createElement("script");
+        k.type = "text/javascript";
+        k.async = true;
+        k.src = "https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";
+        k.onload = function() {
+          try {
+            mixpanel.init('ab97b523e260fe7eb8120c791eefe694', {
+              autocapture: true,
+              record_sessions_percent: 100,
+            });
+          } catch(err) {
+            console.error("Mixpanel init failed:", err);
+          }
+        };
+        var s = e.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(k, s);
+      }
+    } catch(err) {
+      console.error("Mixpanel stub failed to load:", err);
+    }
+  })(document, window.mixpanel || []);
   </script>
 
 </head>
